fix: max link card width on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
     Noto Color Emoji;
+  max-width: 100%;
 }
 
 @media (max-width: 1200px) {
